kubernates hybrid/Without kong Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: kong
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kong
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: kong-cp-kong-proxy
            port:
              number: 80
  tls:
  - hosts:
    - 
    secretName: arun-tls-secret
